--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               </div>
             </div>
             <p>
-             Using data analytics and statistical methods, I am aiming to support marketing teams in key decisions related to marketing performance, budget, customer acquisition, retention, CLV/CAC and ROAS. I conduct analytics and modeling projects to develop insights and recommend actions to optimize the performance of marketing channels. Additionally, I develop analytics powered solutions to improve the monitoring and steering of our marketing KPI's.
+             Using data analytics and statistical methods, I am aiming to support marketing teams in key decisions related to marketing performance, budget, customer acquisition, retention, CLV/CAC and ROAS. I conduct analytics and modeling projects to develop insights and recommend actions to optimize the performance of marketing channels.
             </p>
           </div>
         </div>
@@ -176,35 +176,121 @@
               <h4>Master of Science Marketing</h4>
               <h5>2019 - 2021</h5>
               <p><em> Vienna University of Economics and Business, Austria</em></p>
-              <p>In the “Masters in Marketing” ranking by QS, WU's Master's Program in Marketing again achieved an excellent 10th place out of a total of 93 programs. </p>
+              <ul>
+              <li> Language of instruction: English</li> 
+              <li><a href=" https://www.topuniversities.com/university-rankings/business-masters-rankings/marketing/2020">Top 10 Master Programs in Marketing by QS</a>
+              </li>
+              </ul>
             </div>
             <div class="resume-item">
               <h4>Master Class Central and Eastern Europe </h4>
               <h5>2019 - 2020</h5>
-              <p><em> Vienna University of Economics and Business, Austria</em></p>
-              <p>The Master Class Central and Eastern Europe at WU‘s Competence Center for Emerging Markets and CEE provides
-future managers with relevant qualifi cations for successful
-careers in CEE.</p>
+              <p><em>Vienna University of Economics and Business, Austria</em></p>
+              <ul>
+              <li><a href="https://www.wu.ac.at/en/emcee/teaching/master-class-cee/class-of-2019-20">The Master Class Central and Eastern Europe</a> at WU‘s Competence Center for Emerging Markets and CEE provides relevant qualifications for successful careers in CEE.</li>
+              <li><a href="https://www.wu.ac.at/fileadmin/wu/d/cc/cee/3__Lehre/Masterclass_CEE/MC_2020/MC_CEE_2020_Final_Report.pdf">The final report "Research report on current business challenges for Western multinational firms in CEE".</a></li>
+              </ul>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Science Business Administration</h4>
               <h5>2015 - 2019</h5>
               <p><em>Vienna University of Economics and Business, Austria</em></p>
-              <p></p>
+              <ul>
+              <li> Language of instruction: German</li>  
+              <li>Specialization in :</li>
+                <ul>
+                  <li>Service and Digital Marketing</li>
+                  <li>International Marketing Management</li>
+                </ul>
+              </ul>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Economics (no degree) </h4>
               <h5>2014 - 2015</h5>
-              <p><em> University of Tuzla, Faculty of Economics,Tuzla , Bosnia and Herzegovina</em></p>
-              <p>Two semesters completed.</p>
+              <p><em> University of Tuzla, Faculty of Economics, Tuzla, Bosnia and Herzegovina</em></p>
+              <ul>
+              <li>Two semesters completed.
+              </li>
+              </ul>
             </div>
+            <!-- ======= Organisations ======= --> 
+            <h3 class="resume-title">Organisations</h3>
+            <div class="resume-item">
+                <h4>Internal Financial Auditor</h4>
+                  <h5>07-2018 - 10-2019</h5>
+                  <p><em>AIESEC</em></p>
+                  <ul>
+                  <li>Conducting a systematic examination of financial records and other relevant documents to determine its accuracy and compliance with any applicable rules in accounting/financial reporting standards, regulations and laws.
+                  </li>
+                  </ul>
+            </div>
+            <div class="resume-item">
+                <h4>Finance Manager</h4>
+                  <h5>02-2019 - 07-2019</h5>
+                  <p><em>AIESEC</em></p>
+                  <ul>
+                  <li>Managing financial flows by regularly checking profit and loss statement and balance sheet.</li>
+                  <li>Consolidation of planned and realized budgets.</li>
+                  <li>Managing account receivables and account payables to ensure liquidity.</li>
+                  </ul>
+            </div>
+            <div class="resume-item">
+                <h4>Social Media Manager</h4>
+                  <h5>07-2017 - 02-2018</h5>
+                  <p><em>AIESEC</em></p>
+                  <ul>
+                  <li>Creation and execution of content relevant for a target audience (videos, photos, infographics).</li>
+                  <li>Creation of Facebook campaigns and editorial lines.</li>
+                  <li>Weekly physical/virtual touchpoints with a team.</li>
+                  <li>Weekly report on performance and its analysis.</li>
+                  <li>Coordination and support to bloggers & video team of AIESEC in Austria.</li>
+                  </ul>
+            </div>
+            <div class="resume-item">
+                <h4>Vice President - Business Analytics</h4>
+                  <h5>02-2018 - 02-2019</h5>
+                  <p><em>AIESEC</em></p>
+                  <ul>
+                  <li>Provide legal support to exchange participants with VISA and insurance processes.</li>
+                  <li>Ensure proper and accurate financial documentation and accounting.</li>
+                  <li>Planning, creating, implementation tracking and updating the budget of the Local Committee.</li>
+                  <li>Analysis of different financial issues (investment analysis, product profitability, risk analysis).</li>
+                  <li>Providing regular financial reporting to other relevant instances in the organistaion.</li>
+                  <li>Reguralry conducting performance analysis of the LC Vienna WU.</li>
+                  </ul>
+            </div>
+            <div class="resume-item">
+                <h4>Social Media Manager</h4>
+                  <h5>07-2017 - 02-2018</h5>
+                  <p><em>AIESEC</em></p>
+                  <ul>
+                  <li>Creation and execution of content relevant for a target audience (videos, photos, infographics).</li>
+                  <li>Creation of Facebook campaigns and editorial lines.</li>
+                  <li>Weekly physical/virtual touchpoints with a team.</li>
+                  <li>Weekly report on performance and its analysis.</li>
+                  <li>Coordination and support to bloggers & video team of AIESEC in Austria.</li>
+                  </ul>
+            </div>
+            <div class="resume-item">
+                <h4>Account Manager - Business to Customer</h4>
+                  <h5>02-2017 - 02-2018</h5>
+                  <p><em>AIESEC</em></p>
+                  <ul>
+                  <li>On-site promotion of student exchanges.</li>
+                  <li>Identify, segment and analyze outgoing exchange markets and attraction strategies.</li>
+                  <li>Ensure a good conversion rate for all customer flow phases.</li>
+                  <li>Review of Leadership Development Assessment results of exchange participants.</li>
+                  <li>Organize and deliver preparation for exchange.</li>
+                  </ul>
+            </div>
+              
       <!-- ======= Till here is the left part of CV ======= -->   </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Teaching Assistant - Marketing Engineering</h4>
               <h5>03-2021 - 06-2021</h5>
-              <p><em>WU, Vienna, Austria</em></p>
+              <p><em><a href="https://www.wu.ac.at/en/sm">Institute for Service Marketing and Tourism</a>, Vienna, Austria</em></p>
               <ul>
               <li>Preparation of students for the course through extended learning materials and exercises in customer relationship management topics.</li>
               <li>Mentoring and helping during Customer-Centricity Simulation.</li>
@@ -214,12 +300,12 @@ careers in CEE.</p>
             <div class="resume-item">
               <h4>e-Learning Assistant</h4>
               <h5>02-2020 - 12-2020</h5>
-              <p><em>WU, Vienna, Austria</em></p>
+              <p><em><a href="https://www.wu.ac.at/en/imsm">Institute for Interactive Marketing & Social Media (IMSM)</a>, Vienna, Austria</em></p>
               <ul>
               <li>Creation of R code files for different methods.</li>
               <li>Video tutorials for different methods.</li>
               <li>
-               <a href="https://github.com/IMSMWU/MRDA2020">Working on R tutorials GitHub Page.</a>
+               <a href="https://github.com/IMSMWU/MRDA2020">Working on R tutorials' GitHub Page.</a>
               </li>
               <li>Interactive learning tutorials using "learnr" package.</li>
               <li>Interactive visualization using R Shiny.</li>
@@ -228,7 +314,7 @@ careers in CEE.</p>
             <div class="resume-item">
               <h4>Teaching Assistant - Market Research Design and Analysis </h4>
               <h5>10-2020 - 12-2020</h5>
-              <p><em>WU, Vienna, Austria</em></p>
+              <p><em><a href="https://www.wu.ac.at/en/imsm">Institute for Interactive Marketing & Social Media (IMSM)</a>, Vienna, Austria</em></p>
               <ul>
               <li>Preparation of students for the course through extended learning materials in statistics and exercises in R.</li>
               <li>Mentoring and helping with statistics and R during group works.</li>
@@ -240,7 +326,7 @@ careers in CEE.</p>
             <div class="resume-item">
               <h4>Teaching Assistant - Marketing Research</h4>
               <h5>07-2020 - 09-2020</h5>
-              <p><em>WU, Vienna, Austria</em></p>
+              <p><em><a href="https://www.wu.ac.at/en/imsm">Institute for Interactive Marketing & Social Media (IMSM)</a>, Vienna, Austria</em></p>
               <ul>
               <li>Preparation of students for the course through extended learning materials in statistics and exercises in R.</li>
               <li>Helping with statistics and R during group works.</li>
@@ -250,12 +336,12 @@ careers in CEE.</p>
             <div class="resume-item">
               <h4>Intern </h4>
               <h5>07-2020 - 07-2020</h5>
-              <p><em>Coca-Cola HBC, Sarajevo, Bosnia and Herzegovina</em></p>
+              <p><em><a href="https://ba.coca-colahellenic.com/en">Coca-Cola HBC</a>, Sarajevo, Bosnia and Herzegovina</em></p>
               <ul>
-              <li>Working on a project "Impact of Coronavirus on E-commerce in FMCG industry in Bosnia and Herzegovina"</li>
+              <li>Working on a project "Impact of Coronavirus on E-commerce in FMCG industry in Bosnia and Herzegovina".</li>
               <li>Conducting a primary research related to the project topic.</li>
               <li>
-                <a href=""> Drawing business implications for Coca Cola HBC from our primary research.</a>
+                <a href="assets/data/coke_summership.pdf"> Drawing business implications for Coca Cola HBC from our primary research.</a>
               </li>
               </ul>
               
@@ -263,12 +349,38 @@ careers in CEE.</p>
             <div class="resume-item">
               <h4>Marketing Assistant </h4>
               <h5>07-2019 - 09-2019</h5>
-              <p><em>Drope BnB, Athens, Greece</em></p>
+              <p><em><a href="https://estatebrains.gr/?fbclid=IwAR2rGBgTb4uRO8prIJCSksm8ESUsFsdj92S9u12g55aN8WgbSg3qHXR_yxg">Estate Brains (Ex-Drope BnB)</a>, Athens, Greece </em></p>
+              <ul>
+              <li>Optimization of 87 properties' listings on operating channels.</li>
+              <li> Active social media management and expansion to new online channels: Facebook Page, Facebook Marketplace, Instagram and Nomads List.</li>
+              <li>Text mining of the guests' reviews from AirBnB & Booking.com.</li>
+              <li>Creation of customer personas.</li>
+              <li>Customer targeting on Facebook Ads and Google Ads.</li>
+              </ul>
             </div>
             <div class="resume-item">
               <h4>Social Media Manager </h4>
               <h5>04-2019 - 07-2019</h5>
-              <p><em>JustSayItSonny, Online</em></p>
+              <p><em><a href="https://www.etsy.com/au/shop/JustSayItSonny?ref=profile_header">JustSayItSonny</a>, Freelance</em></p>
+              <ul>
+              <li>Creation of digital marketing strategy.</a></li>
+              <li>Active social media management (Facebook Page and Instagram).</li>
+              <li>Content creation for Instagram and Facebook.</li>
+              <li>Creation of customer personas.</li>
+              </ul>
+            </div>
+            <h3 class="resume-title">Certifications</h3>
+            <div class="resume-item">
+                <h4><a href="https://e-zertifikat.th-brandenburg.de/femcy-mubby-ebiba-gijui-iqufe">Enterprise Resource Planning with SAP S/4HANA (TS410)</h4>
+                <p><em>Technische Hochschule Brandenburg</a></em></p>
+            </div>
+            <div class="resume-item">
+                <h4><a href="https://www.coursera.org/account/accomplishments/verify/YNPSDRQ6KGZS">Predicting Credit Card Fraud with R</h4>
+                <p><em>Coursera Guided Project</a></em></p>
+            </div>
+            <div class="resume-item">
+                <h4><a href="assets/data/cm1.pdf">Certified Marketeer Level 1 </h4>
+                <p><em>General Assembly</a></em></p>
             </div>
           </div>
         </div>
