--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <li><a href="#interests"><i class="bx bx-hive "></i> <span>Skills</span></a></li>
         <li><a href="#skills"><i class="bx bx-conversation"></i> <span>Languages</span></a></li>
-        <li><a href="#services"><i class="bx bx-server"></i> <span>Projects</span></a></li>
+        <li><a href="#portfolio"><i class="bx bx-server"></i> <span>Portfolio</span></a></li>
        <li><a href="#testimonials"><i class="bx bx-like "></i> <span>Testimonials</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -550,8 +550,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Data Science Portfolio</h2>
+          <p> </p>
         </div>
 
         <div class="row">
@@ -568,7 +568,8 @@
           </div>
         </div>
 
-          <!-- How to identify price-insensitive customers?--->
+          <!-- 1 How to identify price-insensitive customers?--->
+          
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
           <div class="col-lg-4 col-md-6 portfolio-item filter-customer_analytics">
             <div class="portfolio-wrap">
@@ -725,7 +726,7 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Project Section ======= -->
+    <!-- ======= Project Section ======= 
     <section id="services" class="services">
       <div class="container" data-aos="fade-up">
 
@@ -849,7 +850,7 @@
         </div>
 
       </div>
-    </section><!-- End Projects Section -->
+    </section> End Projects Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
