--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-imgavif" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3> Marketing Data Analyst </h3>
@@ -406,7 +406,7 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
           <div class="col-lg-4 col-md-6 portfolio-item filter-customer_analytics">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-0.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-0avif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>How to Identify Price-insensitive Customers?</h6>
                 <p>Customer Analytics</p>
@@ -422,7 +422,7 @@
           <!--Which Emotions Are Useful in Customer Reviews?-->
           <div class="col-lg-4 col-md-6 portfolio-item filter-text_mining">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-1avif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>Which Emotions Are Useful in Customer Reviews?</h6>
                 <p>Text Mining</p>
@@ -439,7 +439,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-social_media_analytics">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-2avif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>Twitter Analysis for a Carbon Tax Initiative</h6>
                 <p>Social Media Analytics</p>
@@ -456,7 +456,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-social_media_analytics">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-3avif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>Solving an Interview Task</h6>
                 <p>Social Media Analytics</p>
@@ -473,7 +473,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-customer_analytics">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-4avif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>How to Predict a Churning Customer?</h6>
                 <p>Customer Analytics</p>
@@ -490,7 +490,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-5avif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>How to Predict a Responsive Customer?</h6>
                 <p>Customer Analytics</p>
@@ -507,7 +507,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-customer_analytics">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-6avif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>Value-Based Customer Segmentation</h6>
                 <p>Customer Analytics</p>
@@ -524,7 +524,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-customer_analytics">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-7avif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>Recommendation System for Beauty Products</h6>
                 <p>Customer Analytics</p>
@@ -541,7 +541,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-shiny">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-8avif" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>R Shiny COVID-19 Dashboard </h6>
                 <p>R Shiny Apps</p>
