--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.avif" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.webp" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3> Marketing Data Analyst </h3>
@@ -422,7 +422,7 @@
           <!--Which Emotions Are Useful in Customer Reviews?-->
           <div class="col-lg-4 col-md-6 portfolio-item filter-text_mining">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.avif" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-1.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>Which Emotions Are Useful in Customer Reviews?</h6>
                 <p>Text Mining</p>
@@ -439,7 +439,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-social_media_analytics">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.avif" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-2.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>Twitter Analysis for a Carbon Tax Initiative</h6>
                 <p>Social Media Analytics</p>
@@ -456,7 +456,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-social_media_analytics">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.avif" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-3.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>Solving an Interview Task</h6>
                 <p>Social Media Analytics</p>
@@ -473,7 +473,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-customer_analytics">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.avif" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-4.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>How to Predict a Churning Customer?</h6>
                 <p>Customer Analytics</p>
@@ -490,7 +490,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.avif" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-5.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>How to Predict a Responsive Customer?</h6>
                 <p>Customer Analytics</p>
@@ -507,7 +507,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-customer_analytics">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.avif" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-6.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>Value-Based Customer Segmentation</h6>
                 <p>Customer Analytics</p>
@@ -524,7 +524,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-customer_analytics">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.avif" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-7.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>Recommendation System for Beauty Products</h6>
                 <p>Customer Analytics</p>
@@ -541,7 +541,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-shiny">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.avif" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-8.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h6>R Shiny COVID-19 Dashboard </h6>
                 <p>R Shiny Apps</p>
