Update certificate section

--- a/index.html
+++ b/index.html
@@ -600,22 +600,24 @@ Passionate data professional with expertise in marketing analytics. Originally f
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
             <i class="bx bx-code-block" style="color: #fff;"></i>
-            <h3>Programming in R</h3>
+            <h3><a href="https://e-zertifikat.th-brandenburg.de/femcy-mubby-ebiba-gijui-iqufe" class = "text-white">SAP S/4HANA (TS410)</a></h3>
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+        <div class="col-lg-4 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="bx bx-code-curly" style="color: #fff;"></i>
-            <h3>R Shiny</h3>
+            <h3><a href="https://www.coursera.org/account/accomplishments/verify/YNPSDRQ6KGZS" class = "text-white">Predicting Credit Card Fraud with R</a></h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="bx bx-line-chart" style="color: #fff;"></i>
-            <h3>Tableau</h3>
+            <h3><a href="assets/data/cm1.pdf" class = "text-white">General Assembly</a></h3>
+           <!-- h4><a href="assets/data/cm1.pdf">Certified Marketeer Level 1 </h4>
+                <p><em>General Assembly</a></em></p-->
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+        <!--div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
             <i class= "bx bx-coin-stack" style="color: #fff;"></i>
             <h3>SQL</h3>
@@ -689,7 +691,7 @@ Passionate data professional with expertise in marketing analytics. Originally f
 
         <div class="row skills-content">
 
-          <div class="col-lg-8">
+          <div class="col-lg-10">
 
             <div class="progress">
               <span class="skill">Bosnian/Croatian/Serbian <i class="val">Native</i></span>
