Improvement in descriptions

--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@ Passionate data professional with expertise in marketing analytics. Originally f
             <div class="resume-item">
               <h4>Data Analyst</h4>
               <h5>06-2021 - Currently</h5>
-              <p><em><a href="https://info.tellonym.me/">Tellonym (Callosum Software GmbH)</a>Berlin, Germany</em></p>
+              <p><em><a href="https://info.tellonym.me/">Tellonym (Callosum Software GmbH)</a> Berlin, Germany </em></p>
               <ul>
               <li>Design and implementation of relevant events, parameters, and app performance indicators </li>
-              <li>Collaborating with product managers and developers to define and prioritize analytics goals and objectives</li>
+              <li>Partnered with Product Managers, UX and Graphic Designers to plan, test, and roll out product changes related to anonymous Q&A </li>
               <li>Collecting and organizing data from various sources, such as Google Ad Manager, RevenueCat, SuperSet, and Ruby.</li>
               <li>Analyzing product and revenue stream data using tools such as Excel, SQL, R, and Tableau to identify trends, patterns, and insights</li>
               <li>Developing dashboards and reports to communicate data insights</li>
@@ -406,7 +406,7 @@ Passionate data professional with expertise in marketing analytics. Originally f
               <li data-filter=".filter-customer_analytics">Customer Analytics</li>
               <li data-filter=".filter-social_media_analytics">Social Media Analytics</li>
               <li data-filter=".filter-text_mining">Text Mining</li>
-              <li data-filter=".filter-shiny">R Shiny Apps</li>
+              <!--li data-filter=".filter-shiny">R Shiny Apps</li-->
             </ul>
           </div>
         </div>
@@ -549,7 +549,7 @@ Passionate data professional with expertise in marketing analytics. Originally f
 
           <!--8 COVID 19 Shiny app-->
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-shiny">
+          <!--div class="col-lg-4 col-md-6 portfolio-item filter-shiny">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -557,12 +557,12 @@ Passionate data professional with expertise in marketing analytics. Originally f
                 <p>R Shiny Apps</p>
                 <br>
                 <div class="portfolio-links">
-                  <!--<a href="identification-of-price-insensitive-customers.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><p>Check code only</p></a> --->
+                  <!--<a href="identification-of-price-insensitive-customers.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><p>Check code only</p></a>
                   <a href="https://mirzamujanovic.github.io/portfolio/covid-19-dashboard.html" target="_blank" ><p><b>Click to check it on GitHub</b></p></a>
                 </div>
               </div>
             </div>
-          </div>
+          </div-->
         </div>
       </div>
     </section>
