--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ Leidenschaftlicher Datenexperte mit Fachkenntnissen in Marketing Analytics. Ursp
   <div class="container" data-aos="fade-up">
 
     <div class="section-title">
-      <h2>Languages</h2>
+      <h2>Sprachen</h2>
       <p></p>
     </div>
 
@@ -645,21 +645,21 @@ Leidenschaftlicher Datenexperte mit Fachkenntnissen in Marketing Analytics. Ursp
       <div class="col-lg-10">
 
         <div class="progress">
-          <span class="skill">Bosnian/Croatian/Serbian <i class="val">Native</i></span>
+          <span class="skill">Bosnisch/Kroatisch/Serbisch <i class="val">Muttersprache</i></span>
           <div class="progress-bar-wrap">
             <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
 
         <div class="progress">
-          <span class="skill">English <i class="val">Advanced</i></span>
+          <span class="skill">Englisch<i class="val">C1</i></span>
           <div class="progress-bar-wrap">
             <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
 
         <div class="progress">
-          <span class="skill">German <i class="val">Advanced</i></span>
+          <span class="skill">Deutsch<i class="val">C1</i></span>
           <div class="progress-bar-wrap">
             <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
